# intuitive

./: .gitignore  Cargo.toml
src/: app.rs  lib.rs  lib_tests.rs  main.rs  model.rs  storage.rs  ui.rs
src/model/: creature.rs  encounter.rs  monster.rs  player.rs  stats.rs  status.rs
