[package]
name = "intuitive"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.4"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dice-parser = "0.1.1"
dotenvy = "0.15.7"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tui-input = "0.15.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
